<resources>
    <string name="app_name">CryptoList</string>
    <string name="bitcoin">BITCOIN</string>
    <string name="btc">BTC</string>
    <string name="active_coins">Active coins</string>
    <string name="inactive_coins">Inactive coins</string>
    <string name="only_tokens">only tokens</string>
    <string name="only_coins">Only coins</string>
    <string name="new_coins">New coins</string>
</resources>